fixed white spaces

--- a/css/main.css
+++ b/css/main.css
@@ -209,7 +209,7 @@ header.masthead {
 	}
 
 	h1#header-title{
-		font-size: 70px;
+		font-size: 3rem;
 		padding-left: 10px;
 		padding-right: 10px;
 	}
